[project]
name = "greptimedb-sqlalchemy"
version = "0.1.0"
description = "SQLAlchemy support for GreptimeDB"
authors = [
    { name = "Ning Sun", email = "sunning@greptime.com" }
]
dependencies = [
    "sqlalchemy>=1.4, <2",
    "psycopg2>=2.9.9",
]
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
    'Intended Audience :: Developers',
    'Topic :: Database',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

[project.optional-dependencies]
test = [
    'apache-superset>=3.0.0',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
